client/styles.css
body {
  background-color:aliceblue !important;
}

.nav-bar {
  top: 0px;
  width: 100%;
  height: auto;
  background: #5C258D;
  background: -webkit-linear-gradient(to left, #5C258D , #4389A2);
  background: linear-gradient(to left, #5C258D , #4389A2);
  position: fixed;
  z-index: 10;
  text-align: center;
  -webkit-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  -moz-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  box-shadow: 1px 6px 5px -1px rgba(189,181,191,0.83);
}

h1 {
  font-size: 26px !important;
  padding: 0px;
  font-family:'Lobster', sans-serif !important;
  color: white !important;
}

.search-container {
  padding: 5px;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 100px;
  z-index: 10;
  background: #4389A2;
  background: -webkit-linear-gradient(to left, #5C258D , #4389A2);
  background: linear-gradient(to left, #5C258D , #4389A2);
  -webkit-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  -moz-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  box-shadow: 1px 6px 5px -1px rgba(189,181,191,0.83);
}

.search {
  width: 300px;
  margin-bottom: 3px;
  margin-left: auto;
  margin-right: auto;
}

.divide {
  color: white;
  font-size: 10px;
  line-height: 10px;
  text-align: center;
}

.btn-location {
  padding: 5px !important;
  margin-top: 0px !important;
  margin-bottom: 5px !important;
  margin-left: auto;
  margin-right: auto;
  color: #4389A2 !important;
  background: aliceblue !important;
  width: 300px !important;
  height: 50%;
}

.map-container {
  margin-top: 67px;
  margin-left: auto;
  margin-right: auto;
  width: 95%;
  border-radius: 10px;
  -webkit-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  -moz-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
}

#map {
  height: 300px;
  width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;

}

.loc-container {
  background: #5C258D;
  background: -webkit-linear-gradient(to left, #5C258D , #4389A2) !important;
  background: linear-gradient(to left, #5C258D , #4389A2) !important;
  margin: 0 auto;
  width: 100%;
  height: auto;
  text-align: center;
  font-size: 22px;
  font-family:'Lobster', sans-serif !important;
  line-height: 26px;
  padding: 5px;
  color: white;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.photo-container {
  text-align: center;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  margin-bottom: 26%;
  -webkit-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  -moz-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  box-shadow: 1px 6px 5px -1px rgba(189,181,191,0.83);
  overflow: scroll;
}

.photo {
  height: 250px;
  width: 250px;
  cursor: pointer;
  border-color: white;
  border-style: solid;
  border-width: 1px;
}

.photo:hover {
  border-style: solid;
  border-color: #FFD700;
  border-width: 1px;

}

.modal-container {
  position: fixed;
  z-index: 10;
  color: white;
  left: 50%;
  top: 70%;
  transform: translate(-50%, -82%);
  -webkit-transform: translate(-50%, -82%);
  -moz-transform: translate(-50%, -82%);
  width: 90%;
  background-color: white;
  bottom: 0;
  height: 0px;
  -webkit-transition: all .5s;
  transition: all .5s;
  transition-timing-function: cubic-bezier(0.25,0.1,0.25,1);
  -webkit-transition-timing-function: cubic-bezier(0.25,0.1,0.25,1);
  -webkit-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  -moz-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  box-shadow: 1px 6px 5px -1px rgba(189,181,191,0.83);
}

.content-container {
  padding-top: 5px;
  padding-left: 5px;
  color: black;
  width: 50%;
  float: left;
}

#username {
  color: #4389A2;
  padding: 5px;
}

.icon {
  padding: 2px;
  color: tomato !important;
}

.modal-img {
  padding: 10px;
  float:left;
  width: auto;
  height: 100%;
}

.modal-container.visible {
  height: 70%;
  overflow-y: scroll;
}

@media (max-width: 580px){

  .nav-bar {
    position: absolute;
  }

  h1 {
    font-size: 24px !important;
    padding: 0px;
    font-family:'Lobster', sans-serif !important;
    color: white !important;
  }

  .photo {
    height: 100px;
    width: 100px;
  }

  #map {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
  }

  .map-container {
    margin-top: 60px;
    width: 100%;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
  }

  .loc-container {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .modal-container {
    width: 100%;
    display: inline-block;
  }

  .modal-container {
    left: 50%;
    top: 100%;
    transform: translate(-50%, -100%);
    -webkit-transform: translate(-50%, -100%);
    -moz-transform: translate(-50%, -100%);
    width: 100%;
    overflow-x: auto;
  }

  .modal-container.visible {
    height: 100%;
    overflow-y: scroll;
  }

  .modal-img {
    width: 100%;
    height: auto;
  }

  .content-container {
    width: 100%;
    padding: 10px;
    margin: 0 auto;
    text-align: left;
  }

  .text-container {
    margin-left: 10px;
    margin-right: 10px;
    text-indent: 10px;
}

.btn-location {
  border-radius: 0px !important;
  width: 100% !important;
  height: 50% !important;
  /*background: #5C258D !important;
  color: white !important;*/
}

.search-container {
  margin-left: 0px;
  margin-right: 0px;
  padding: 3px;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 100px;
  z-index: 10;
  background: #5C258D;
  background: -webkit-linear-gradient(to left, #5C258D , #4389A2);
  background: linear-gradient(to left, #5C258D , #4389A2);
  -webkit-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  -moz-box-shadow: 7px 6px 5px -1px rgba(189,181,191,0.83);
  box-shadow: 1px 6px 5px -1px rgba(189,181,191,0.83);
}

.search {
  width: 100%;
}

@media (max-width: 375px){
  .photo {
    height: 92px;
    width: 92px;
  }
}

